Profile links added to mobile, fixed letter overflow on smaller phones

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -94,7 +94,7 @@
         }
 
         h1{
-            font-size: 3.5rem;
+            font-size: 3.3rem;
         }
 
         .flat-button{
