--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -74,6 +74,7 @@
         &:first-child {
           &:after {
             content: 'HOME';
+            font-family: "Coolvetica";
           }
         }
       }
@@ -81,18 +82,21 @@
       a.about-link {
         &:after {
           content: 'ABOUT';
+          font-family: "Coolvetica";
         }
       }
   
       a.contact-link {
         &:after {
           content: 'CONTACT';
+          font-family: "Coolvetica";
         }
       }
   
       a.portfolio-link {
         &:after {
           content: 'PORTFOLIO';
+          font-family: "Coolvetica";
         }
       }
   
@@ -140,7 +144,7 @@
       height: auto;
       min-height: auto;
 
-      ul, nav{
+      nav{
         display: none;
       }
 
